Changelog
=========

8.4-dev - (unreleased)
----------------------

8.3 - (2013-12-10)
------------------
* Change: do not save success portal message in aggregated edit,
  for simple_edit
  [simiamih refs #16797]

8.2 - (2013-12-05)
------------------
* Change: explicitly depend of Products.EEAContentTypes within setup.py of
  this package
  [ichimdav refs #17588]
* Change: use the ITemporalCoverageAdapter from within Products.EEAContentTypes
  instead of eea.dataservice
  [ichimdav refs #17588]
* Feature: Added resize feature for embedded charts
  [szabozo0 refs #17453]
* Change: removed versions macro; now using viewlet
  [simiamih refs #17321]
* Change: removed the dependecy to eea.locationwidget
  [ghicaale refs #9155]

8.1 - (2013-11-21)
------------------
* Change: cosmetics. harmonized box style
  [demarant refs ##16676]

8.0 - (2013-11-20)
------------------
* Feature: check for temporalCoverage and geographicalCoverage also from
  DavizVizualizations within an Assessment or an IndicatorFactSheet
  [ichimdav refs #17306]

7.9 - (2013-11-05)
------------------
* Bug fix: make sure computed Titles are bytestreams not unicode
  [tiberich #17364]

7.8 - (2013-10-04)
------------------
* Bug fix: fix doctests
  [tiberich]

7.7 - (2013-09-23)
------------------
* Bug fix: update portlet readiness style to fix for latest Jquery UI
  [tiberich #16767]
* Bug fix: use bytestreams as return values for Title in IMS content. By default
  Plone (Archetypes) stores fields values as unicode, but returns them as bytestreams
  encoded as utf-8 (or the field's specified encoding)
  [tiberich #16767]

7.6 - (2013-09-18)
------------------
* Bug fix: Fixed manage portlets page on Assessment, IndicatorFactSheet and
  Specification
  [tiberich #14593]
* Bug fix: more logic condition fixes on frequency of updates agg edit
  [tiberich #16754]

7.5 - (2013-09-17)
------------------
* Bug fix: fix logic condition in eea.indicators frequency of edit display
  [tiberich #16754]
